# agent-news-reader

./: Cargo.toml  LICENSE  README.md
.github/workflows/: test.yml
src/: daemon.rs  main.rs
src/api/: mod.rs
src/app/: components.rs  keybindings.rs  mod.rs  ui.rs
src/db/: mod.rs  models.rs
src/db/migrations/: 001_initial.sql  002_feed_cache.sql  003_articles_unread_count_index.sql  004_extract_attempts.sql
src/feed/: extract.rs  mod.rs
