[package]
name = "agent-news-reader"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
ratatui = { version = "0.30.0", features = ["crossterm"] }
scraper = "0.26.0"
crossterm = "0.29.0"
feed-rs = "2.3"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
rusqlite = { version = "0.34", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"
